# mcp-server

server/mcp_server_vpn/: README.md  README_zh.md  pyproject.toml  requirements.txt
server/mcp_server_vpn/src/mcp_server_vpn/: main.py  server.py
server/mcp_server_vpn/src/mcp_server_vpn/clients/: __init__.py  base.py  models.py  vpn.py
server/mcp_server_vpn/src/mcp_server_vpn/resource/: __init__.py  vpn_resource.py
server/mcp_server_vpn/tests/: test_server.py  test_to_params.py
